# sqlorm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TECHNICAL.md  pyproject.toml  revise.py  setup.py
docs/: TECHNICAL.md
examples/: 01_quickstart.py  02_with_migrations.py  __init__.py  advanced_usage.py  basic_usage.py  configuration_examples.py  models_example.py  multi_database_usage.py  postgresql_usage.py  todo.py  todo_cli.py
examples/todo_migrations/: 0001_initial.py  0002_task_updated_at.py  0003_auto_update.py
latest_sqlorm/: CONTRIBUTING.md  Makefile  Testing_DataBase.sqlite.db  setup.py  sqlorm.py  test.py  test_db_name.sqlite.db  test_sqlorm.py
latest_sqlorm/.ipynb_checkpoints/: sqlorm_tutorual-checkpoint.ipynb
sqlorm/: __init__.py  base.py  cli.py  config.py  connection.py  exceptions.py  fields.py  py.typed
sqlorm/app/: __init__.py  apps.py  models.py
sqlorm/models_app/: __init__.py  apps.py  models.py
sqlorm/models_app/migrations/: 0001_initial.py  __init__.py
tests/: __init__.py  test_edge_cases_and_performance.py  test_migrations.py  test_multi_database.py  test_sqlorm.py
