[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlorm"
version = "3.0.0"
authors = [
    { name = "S.S.B", email = "surajsinghbisht054@gmail.com" }
]
description = "Django ORM for standalone Python scripts - Use Django's powerful ORM without a full Django project"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Typing :: Typed",
]
keywords = [
    "django",
    "orm",
    "database",
    "sql",
    "sqlite",
    "postgresql",
    "mysql",
    "standalone",
    "script",
    "models",
    "serialization",
    "type-hints",
]
dependencies = [
    "Django>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "django-stubs>=4.0",
    "pre-commit>=3.0",
]
postgresql = [
    "psycopg2-binary>=2.9",
]
mysql = [
    "mysqlclient>=2.1",
]
yaml = [
    "pyyaml>=6.0",
]
all = [
    "psycopg2-binary>=2.9",
    "mysqlclient>=2.1",
    "pyyaml>=6.0",
]

[project.scripts]
sqlorm = "sqlorm.cli:main"

[project.urls]
"Homepage" = "https://github.com/surajsinghbisht054/sqlorm"
"Bug Tracker" = "https://github.com/surajsinghbisht054/sqlorm/issues"
"Documentation" = "https://github.com/surajsinghbisht054/sqlorm#readme"
"Source Code" = "https://github.com/surajsinghbisht054/sqlorm"
"Changelog" = "https://github.com/surajsinghbisht054/sqlorm/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
sqlorm = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --ignore=tests/test_multi_database.py"
# Note: Multi-database tests must be run separately due to Django configuration constraints:
#   pytest tests/test_multi_database.py -v

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["sqlorm"]
skip = [".venv", "venv", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "sqlorm.config"

[tool.coverage.run]
source = ["sqlorm"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
